--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+</head>t
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-300">
 <h1 class="text 2xl font-bold mb-6 text-7xl text-black">Light</h1>
   
