--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <h1 class="text 2xl font-bold mb-6 text-7xl text-black">Light</h1>
   
 <div id="on" class="hidden">
-    <img src="onnn.png"" class="w-32">
+    <img src="on.png"" class="w-32">
 </div>
 
 <div id="off">
-    <img src="WhatsApp_Image_2025-02-15_at_02.32.31_39f80ac5-removebg-preview.png"
+    <img src="off.png"
     alt="light" class="w-32">
 </div>
     
