--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documen</title>
+    <title>Docume</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>t
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-300">
