--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   
 <div id="on" class="hidden">
     <img src="on.png"" class="w-32">
-</div>
+1</div>
+
 
 <div id="off">
     <img src="off.png"
@@ -25,5 +26,6 @@
     </div>
    
 <script src="main.js"></script>
+
 </body>
 </html>
