added rounded btn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="flex space-x-4">
 <button id="btnon" class="px-[25px] py-[15px] text-4xl mt-[12%] bg-green-500 text-white rounded-[10%] hover:bg-red-600">On</button>
-<button id="btnoff" class="px-[25px] py-[15px] text-4xl mt-[12%] bg-green-500 text-white rounded hover:bg-red-600">Off</button>
+<button id="btnoff" class="px-[25px] py-[15px] text-4xl mt-[12%] bg-green-500 text-white rounded-[10%] hover:bg-red-600">Off</button>
     </div>
    
 <script src="main.js"></script>
